--- a/src/consume/config/variables.env
+++ b/src/consume/config/variables.env
@@ -5,12 +5,8 @@ PYTHON_PORT=5000
 
 # APP
 NIVEL_LOGS=INFO
-DIRECTORIO_LOGS=produce/logs
-DIRECTORIO_SISTEMA_ARCHIVOS=produce/file-system
-DIRECTORIO_TEMP=/tmp
+LOGS_PATH=produce/logs
+TEMP_PATH=/tmp
 
 # DATABASE
-DB_TIPO=SQLITE
-
-DB_SQLITE_SCRIPT=consume/db/sqlite/script.sql
-DB_SQLITE_RUTA=produce/db/sqlite/sqlite.db
+DB_SQLITE_PATH=produce/db/sqlite/sqlite.db
